# Qcompiler

./: CMakeLists.txt  build_self.sh  readme.md  tags
chunkFile/: testbool.q  testclass.q  testfun.q  testsuper.q
include/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
lib/: libqlc.dylib
src/: CMakeLists.txt  chunk.c  compiler.c  debug.c  memory.c  object.c  scanner.c  scanner.cpp  scanner.cpp~  table.c  tags  value.c  vm.c
test/: CMakeLists.txt  tags  test.c
